# geodesy-cpp

./: .cproject  .gitmodules  .project  CMakeLists.txt  Doxyfile  README  setup.sh
cmake/: cppcheck.cmake  lcov.cmake
continuous_integration/: .gitignore  checkin.sh  copy-paste-detector
src/: Angle.cpp  Angle.hpp  CMakeLists.txt  Ellipsoid.cpp  Ellipsoid.hpp  GeodeticCalculator.cpp  GeodeticCalculator.hpp  GeodeticCurve.cpp  GeodeticCurve.hpp  GeodeticMeasurement.cpp  GeodeticMeasurement.hpp  GlobalCoordinates.cpp  GlobalCoordinates.hpp  GlobalPosition.cpp  GlobalPosition.hpp
test/: CMakeLists.txt  GeoUnitTests.cpp  GeodeticCalculatorTest.cpp  GeodeticCalculatorTest.hpp
